src/antish/example/correct/test1.ha
import StdLib

f x = {
  try {
    move;
  } 
  catch{
    turn left;
  }
}

main = {
  f 10;
  if (Foe Ahead) then {
     move;
  }
  else {
     turn right;
 }
}
